--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@nuxtjs/firebase": "^7.6.1",
     "@tailwindcss/forms": "^0.3.3",
+    "cookie-universal-nuxt": "^2.1.5",
     "core-js": "^3.15.1",
     "firebase": "^8.10.0",
     "node-modules": "^1.0.1",
