--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "core-js": "^3.15.1",
     "firebase": "^8.10.0",
     "node-modules": "^1.0.1",
-    "nuxt": "^2.15.7"
+    "nuxt": "^2.15.7",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^4.2.1",
